static/styles/mdp.scss
/* ... */
.signup-template{
  $signup-font-size: 120%;

  .signup-input {
    .ui-select-choices-row-inner, .ui-select-match-item{font-size: $signup-font-size;}
    input, select, .ui-select-toggle, textarea {
      text-align: center;
      font-size: $signup-font-size; padding: 1.5%;
      border:solid 2px!important;
      border-color: $color-brown--light!important;
      border-radius: 0!important;
      resize: none;

    }

    select {
      -webkit-border-radius:0;
      -moz-border-radius:0;
    }

    .ui-select-bootstrap  {

      padding:0; border:none;

      * { box-shadow: none!important; outline:0 !important;}

      & > .ui-select-choices{left:0;text-align: left;}
      input {width:100%!important;}
      .ui-select-highlight { color :$color-brown; }
      .ui-select-choices {.btn { width:100%; text-align: left;}}
      .ui-select-choices-row {
        &.active .ui-select-choices-row-inner {
          background-color:$color-brown--light!important; color:#fff!important;
          .ui-select-highlight { color: $color-black; }
        }
      }
      .ui-select-match-item { background-color:$color-brown!important; color:#fff!important; border:$color-brown--dark!important;}
      .ui-select-placeholder, .ui-select-match-text{ position: relative; top: -10px;}
      .ng-not-empty:first-child{ padding:1%!important; }

    }

  }
}

.moment-picker {
  z-index:200000000000!important;

  font-size: 200%;

  * { color: $color-brown;}
  .header-view {
    border-radius: 5px;

    th, th:hover {
      color: $color-white;
      background: $color-brown--light;
    }

  }
  td {
    &.selected { background: $color-brown--dark; }
  }

}

.pivacy_check_form{
  i, a { color:$color-brown--dark; font-weight: bold;}
}

.pac-container {z-index:100000000;}

.subform-submitted .signup-input{

  //email
  //max
  //maxlength
  //min
  //minlength
  //number
  //pattern
  //required
  //url

  .ng-invalid, // for simple html
  .ng-empty .ui-select-toggle, // simple select
  .ui-select-container.ng-empty .ui-select-search// multi select
  {
    border-color:$color-red!important;
  }
  .glyphicon-unchecked.required { color:$color-red!important; }

}

.fake-input {
  &__container {
    position: relative;
    border:solid 3px $color-brown; border-radius: 50%;
    z-index: 10000;
    input {
      display: block;
      width: 100%;
      height: 100%;
      position: absolute;
      top: 0; left: 0; bottom: 0; right: 0;
      z-index: 10002;
      opacity: 0;
      cursor: pointer;
    }

    width:40%; left:30%; right:30%;
    @media all and (max-width: $sm) {
      width: 80%;
      left: 10%;
      right: 10%;
    }


  }
  &__icon{
    color: $color-brown;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    z-index: 10001;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    & > * {margin:0; padding:0;}

  }
}

.profile-edit__tooltip{

  left:75%!important;
  * { background: #f00!important; color:#fff!important; }
  .tooltip-arrow { display: none!important;}

}
                                                                                
chatbot {
  //position:fixed; right:5%; bottom:0; width:30%; z-index:1000000;
  position:absolute; right:0; bottom:0; width:100%!important; z-index:1000000;

  .chatbot{
    width:100%;

    &__container{background: white; border-radius: 5px 5px 0 0; overflow: hidden; box-shadow: 0 0 2px #a3a3a3;}

    &__header{

      &__flex{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100%;
      }

      width: 100%; height:60px;

      position: relative;
      background: $color-red;
      h1, h2, h3 ,h4, h5 { margin:0; padding:0; }
        .entity-actions {
          flex-grow:1;
          margin:0; height:100%;
          display: flex; flex-direction:row; justify-content: center; align-items: center;
          & > * { margin:0 10px; color:$color-red--dark;}
        }
    }
    &__body{
      background: white;
      @extend .cairo; @extend .semi-bold;
      letter-spacing: normal; line-height: normal;
      text-align: center;
    }

    &__toggler {
      right: 5%;
      position: absolute;
      top: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
      height: 100%;
    }

  }
}

.tooltip {
  z-index:300000000;
  &-inner {word-wrap: break-word!important;}
  //.tag-& {
  //  * {word-wrap: break-word!important;}
  //}
}
profile-questions {
  float: left;

  .profile-question {

    @media all and(max-width: $lg){ &:nth-child(2n+3){ clear: both; }}
    @media all and(min-width: $lg){ &:nth-child(3n+4){ clear: both; }}
    font-size: 1.3rem;
    @extend .light;

    &__actions {
      display: flex;
      flex-direction: row;
      justify-content: flex-end;

      //& > * {display: none;}
      &:hover > * {display: block!important;}
      &--edit > * {display: block!important;}

    }

    &__inner {
      padding:10%; border:solid 1px #efefef;
    }
    &__actions {
      position: absolute; top:0; right:0; bottom:0; left:0; width:100%; height:100%;
    }
    &__answers {
      width:100%;
      display: flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
      background: #fff;
      padding:5% 0 0 0;
      flex-wrap: wrap;
    }

    &--edit {
      position: absolute;
      z-index: 1000000;
      box-shadow: 0 0 3px #000;
      left: -10%;

      @media all and(max-width: $sm){ left:0; max-width: 100%; }

    }

  }
}

// Elements that Add space at bottom of some pages
.hidden_space_bottom{ display: none;}

// Button that close wizard modal
.wizard__close{
  z-index: 20000000;
  cursor: pointer;
  position: absolute; top:0%; right: 5%;
  .chatbot & {display:none;}
}
/* ... */

